# backend_github

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  Use case for admin.drawio  docker-compose.yml  pyproject.toml  wait-for-db.sh
app/: main.py
app/api/: exceptions.py
app/api/v1/: advice.py  analytics.py  auth.py  categories.py  chat.py  expenses.py  health.py  receipts.py  router.py
app/core/: config.py  jwt.py  logging_config.py
app/db/: database.py  models.py  psycopg.py
app/db/sql/: 001_create_tables.sql  create_tables.sql  test.sql
app/schemas/: analytics.py  auth.py  category.py  expense.py  user.py
app/services/: chat_manager.py
app/utils/: mail_sender.py  security.py
tests/: test_chat.py  test_expenses.py
